<resources>
    <string name="app_name">Movies ( Advanced )</string>
    <string name="history">History</string>
    <string name="drama">Drama</string>
    <string name="action">Action</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="actors">Actors</string>
    <string name="introduction">Introduction</string>
    <string name="director">Director / %s</string>
    <string name="background">background</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="poster">poster</string>
</resources>